# nmmi_winter_school

./: README.md
iai_qb_cube_driver/: CMakeLists.txt  package.xml
iai_qb_cube_driver/config/: arm-interpolator.yaml  gripper-interpolator.yaml  nmmi-challenge.yaml
iai_qb_cube_driver/include/iai_qb_cube_driver/: Driver.hpp
iai_qb_cube_driver/launch/: iai_qb_cube_driver.launch  interpolator.launch  nmmi_challenge.launch
iai_qb_cube_driver/scripts/: with_realtime
iai_qb_cube_driver/src/iai_qb_cube_driver/: Driver.cpp  Interpolator.cpp  main.cpp
iai_qb_cube_msgs/: CMakeLists.txt  package.xml
iai_qb_cube_msgs/msg/: CubeCmd.msg  CubeCmdArray.msg  CubeData.msg  CubeDataArray.msg  CubeState.msg  CubeStateArray.msg  CubeStiff.msg  CubeStiffArray.msg
nmmi_executive/: CMakeLists.txt  nmmi-executive.asd  package.xml
nmmi_executive/launch/: nmmi_executive.launch
nmmi_executive/scripts/: nmmi_executive
nmmi_executive/src/: arm-control.lisp  main.lisp  msg-conversions.lisp  package.lisp  proprioception.lisp  utils.lisp
qb_cube_interface/: CMakeLists.txt  package.xml
qb_cube_interface/include/: definitions.h
qb_cube_interface/launch/: qb_cube_interface.launch
qb_cube_interface/src/: codiceperlore.cpp  qb_cube_interface_node.cpp  qbmove_communications.cpp
qb_cube_interface/srv/: SetCubePosStiff.srv
vsa_3dof_arm_description/: CMakeLists.txt  package.xml
vsa_3dof_arm_description/launch/: display.launch
vsa_3dof_arm_description/meshes/qb/: only_hand.stl
vsa_3dof_arm_description/urdf/qb/: .body.urdf.xacro.swp  body.urdf.xacro  body_defs.urdf.xacro
vsa_compet_bringup/: CMakeLists.txt  package.xml
vsa_compet_bringup/launch/: sim_setup.launch
vsa_compet_ik/: CMakeLists.txt  README.md  package.xml
vsa_compet_ik/scripts/: test_ik_base_link_zero.sh  test_ik_left_holder.sh  test_ik_right_holder.sh
vsa_compet_ik/src/: arm_ik_controller.py  arm_pos_error.py  int_marker_server_3dof.py  int_marker_to_arm_ik.py  kdl_parser_test.py
